compile/two/files/tmp_1557902307.1.Compile_error
./files/tmp_1557902307.1.cpp:1:1: error: ‘xx’ does not name a type
 xx
 ^
